[package]
name = "win-toast"
version = "0.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.6"
widestring = "0.4.0"
win-toast-sys = { git = "https://github.com/SpiralP/rust-win-toast-sys.git" }


# remove this when we update failure
quote = "=1.0.2"


[dev-dependencies]
lazy_static = "1.4.0"
